Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -79,11 +79,19 @@ body {
 
 
 /*Main Content*/
+.intro-container {
+	display: block;
+	max-width: 700px;
+	margin: 0 auto;
+	padding-bottom: 100px;
+}
+
 .container {
 	display: block;
 	max-width: 700px;
 	margin: 0 auto;
 	padding-bottom: 100px;
+	padding-top: 400px;
 }
 
 .container h2 {
